test/conformance/chainsaw/reports/admission/two-rules-with-different-modes/reports-assert.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: ClusterPolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  ownerReferences:
  - apiVersion: v1
    kind: Namespace
    name: good-ns-1
results:
- message: 'validation error: You must have label  with value  set on all new namespaces.
    rule require-ns-env-label failed at path /metadata/labels/environment/'
  policy: check-ns-labels
  result: fail
  rule: require-ns-env-label
  scored: true
  source: kyverno
- message: validation rule 'require-ns-purpose-label' passed.
  policy: check-ns-labels
  result: pass
  rule: require-ns-purpose-label
  scored: true
  source: kyverno
scope:
  apiVersion: v1
  kind: Namespace
  name: good-ns-1
summary:
  error: 0
  fail: 1
  pass: 1
  skip: 0
  warn: 0
---
apiVersion: wgpolicyk8s.io/v1alpha2
kind: ClusterPolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  ownerReferences:
  - apiVersion: v1
    kind: Namespace
    name: good-ns-2
results:
- message: validation rule 'require-ns-env-label' passed.
  policy: check-ns-labels
  result: pass
  rule: require-ns-env-label
  scored: true
  source: kyverno
- message: validation rule 'require-ns-purpose-label' passed.
  policy: check-ns-labels
  result: pass
  rule: require-ns-purpose-label
  scored: true
  source: kyverno
scope:
  apiVersion: v1
  kind: Namespace
  name: good-ns-2
summary:
  error: 0
  fail: 0
  pass: 2
  skip: 0
  warn: 0
