test/conformance/chainsaw/reports/admission/two-rules-with-different-modes/reports-error.yaml
apiVersion: wgpolicyk8s.io/v1beta1
kind: ClusterPolicyReport
metadata:
  ownerReferences:
  - apiVersion: v1
    kind: Namespace
    name: bad-ns-1
---
apiVersion: wgpolicyk8s.io/v1beta1
kind: ClusterPolicyReport
metadata:
  ownerReferences:
  - apiVersion: v1
    kind: Namespace
    name: bad-ns-2
